# Woxel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fs_cubes.sc  varying.def.sc  vs_cubes.sc
cmake/: woxel_utilities.cmake
src/: .clang-format  CMakeLists.txt  main.cpp
src/woxel_engine/: CMakeLists.txt  woxel_engine.hh
src/woxel_engine/core/: CMakeLists.txt  application.cc  application.hh  base.hh  entry_point.hh  layer.cc  layer.hh  layer_stack.cc  layer_stack.hh  log.cc  log.hh  time.cc  time.hh
src/woxel_engine/debug/: CMakeLists.txt  instrumentor.cc  instrumentor.hh
src/woxel_engine/gui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_layer.cc  imgui_layer.hh
src/woxel_engine/messages/: CMakeLists.txt  message.hh  messages.hh  observer.hh
src/woxel_engine/scene/: CMakeLists.txt  components.hh  scene.cc  scene.hh  system.cc  system.hh
src/woxel_engine/scene/world/: CMakeLists.txt  chunk.cc  chunk.hh  chunk_container.cc  chunk_container.hh  chunk_manager.cc  chunk_manager.hh  types.cc  types.hh
src/woxel_game/: CMakeLists.txt  main.cpp  woxel_app.cpp  woxel_game_layer.cc  woxel_game_layer.hh
src/woxel_game/components/: CMakeLists.txt  metaball.hh
src/woxel_game/systems/: CMakeLists.txt  metaball_renderer.cc  metaball_renderer.hh  simc.cc  simc.hh
